# wmcompanion

./: .editorconfig  .gitignore  .pylintrc  README.md  pyproject.toml
examples/: automatic_suspend_on_idle.py  battery_warning.py  configure_monitor_xrandr.py  polybar_icons.py  power_menu.py  set_energy_profile.py  setup_input_devices.py  show_keyboard_layout.py
tests/: test_wmcompanion.py
wmcompanion/: __init__.py  app.py  cli.py  decorators.py  errors.py  event.py  event_listening.py  object_container.py
wmcompanion/events/: audio.py  bluetooth.py  keyboard.py  network.py  notifications.py  power.py  x11.py
wmcompanion/events/libexec/: README.md  wireplumber-volume-watcher.lua  x11_device_watcher.py  x11_screen_watcher.py
wmcompanion/modules/: notifications.py  polybar.py
wmcompanion/utils/: dbus_client.py  inotify_simple.py  process.py  process_watcher.py  subprocess.py
