[tool.poetry]
name = "wmcompanion"
version = "0.6.3"
license = "Apache-2.0"
description = "wmcompanion is a utility for connecting system events to user actions"
authors = ["Daniel Pereira <daniel@garajau.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
dbus-next = "^0.2"
xcffib = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
wmcompanion = "wmcompanion.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
